<resources>
    <string name="app_name">VocaGO</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="knowledgeText">How well do you know this word?</string>
    <string name="addUnit">Add unit</string>
    <string name="deleteUnit">Delete unit</string>
    <string name="renameUnit">Rename unit</string>
    <string name="manageUnit">Manage unit</string>
    <string name="deleteuniterror">You need at least one unit</string>
    <string name="newUnit">New unit</string>
    <string name="addWord">Add word</string>
    <string name="cancel">Cancel</string>
    <string name="foreignWord">Foreign word</string>
    <string name="translation">Translation</string>
    <string name="means">means</string>
    <string name="next">Next</string>
    <string name="evaluation">Evaluation</string>
    <string name="unitAddText">has been added</string>
    <string name="unitDeleteText">has been deleted</string>
    <string name="title_activity_wordlist" translatable="false">wordListActivity</string>
    <string name="addWordError">Word can\'t be empty</string>
    <string name="editWord">Edit word</string>
    <string name="delete">Delete</string>
    <string name="wordList">Dictionary</string>
    <string name="wordRepitition">Word repititions</string>
    <string name="words">words</string>
    <string name="repError1">Please type in a number between 0 and 10 for "11 - 20 Words"</string>
    <string name="repError2">Please type in a number between 0 and 20 for "21 - 30 Words"</string>
    <string name="repError3">Please type in a number between 0 and 30 for "31+ Words"</string>
    <string name="help">Help</string>
    <string name="askedWords">First shown word</string>
    <string name="askForeign">Translation first</string>
    <string name="askTranslation">Foreign word first</string>
    <string name="askError">You have to select at least one option</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="repHelpText">//TODO</string>
    <string name="askHelpText">//TODO</string>
    <string name="importUnit">Import Unit</string>
    <string name="exportUnit">Export Unit</string>
    <string name="exportSuccess">has been saved to your \'Downloads\' folder</string>
</resources>
