<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item android:title="Units">
        <menu>-->
            <group android:checkableBehavior="single">
                <item android:title="Unit 1"
                    android:icon="@drawable/ic_description_24dp"
                    />
                <item android:title="Unit 2 - Test für zu langen titel"
                    android:icon="@drawable/ic_description_24dp"
                    />
                <item android:title="Unit 3"
                    android:icon="@drawable/ic_description_24dp"
                    />
            </group>
       <!-- </menu>
    </item>-->
    <item android:title="@string/manageUnit">
        <menu>
            <item
              android:title="@string/addUnit"
                android:id="@+id/addUnit"
                android:icon="@drawable/ic_add_24dp_black"
                />
            <item
                android:title="@string/deleteUnit"
                android:id="@+id/deleteUnit"
                android:icon="@drawable/ic_delete_24dp"
                />
            <item
                android:title="@string/renameUnit"
                android:id="@+id/renameUnit"
                android:icon="@drawable/ic_mode_edit_24dp"
                />
            </menu>
        </item>
</menu>
